force-app/main/default/objects/animalos__Job_Note__c/animalos__Job_Note__c.object-meta.xml
<CustomObject>
    <label>Job Note</label>
    <nameField>
        <displayFormat>JN{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>