force-app/main/default/objects/animalos__Job_Note__c/fields/animalos__Client__c.field-meta.xml
<CustomField>
    <fullName>animalos__Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Notes</relationshipLabel>
    <relationshipName>Client_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>