force-app/main/default/objects/animalos__Job_Note__c/fields/animalos__Interaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Interaction_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Interaction Date/Time</label>
    <type>DateTime</type>
</CustomField>