force-app/main/default/objects/animalos__Job_Note__c/fields/animalos__Job__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>animalos__Job__c</referenceTo>
    <relationshipLabel>Job Notes</relationshipLabel>
    <relationshipName>Job_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>