force-app/main/default/objects/animalos__Job_Note__c/fields/animalos__Type_Of_Interaction__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type_Of_Interaction__c</fullName>
    <label>Type of Interaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption Restrictions</fullName>
            </value>
            <value>
                <fullName>Animal Care Notes</fullName>
            </value>
            <value>
                <fullName>Behaviour</fullName>
                <label>Behaviour General</label>
            </value>
            <value>
                <fullName>Behaviour Post Adoption</fullName>
            </value>
            <value>
                <fullName>Behavior Notes</fullName>
                <label>Behaviour Rehabilitation &amp; Training</label>
            </value>
            <value>
                <fullName>Block/Row Note</fullName>
            </value>
            <value>
                <fullName>Clinic Note</fullName>
            </value>
            <value>
                <fullName>Daily Observation</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Foster Care</fullName>
            </value>
            <value>
                <fullName>Foster Care Notes</fullName>
            </value>
            <value>
                <fullName>Hea Animal</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Inbound Email</fullName>
            </value>
            <value>
                <fullName>Inbound Phone Call</fullName>
            </value>
            <value>
                <fullName>Inbound SMS</fullName>
            </value>
            <value>
                <fullName>Inbound Voicemail</fullName>
            </value>
            <value>
                <fullName>Indemnity Waiver</fullName>
            </value>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Inspectorate</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Master Problem</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Medication Notes</fullName>
            </value>
            <value>
                <fullName>Notes to vets</fullName>
            </value>
            <value>
                <fullName>Outbound Email</fullName>
            </value>
            <value>
                <fullName>Outbound Phone Call</fullName>
            </value>
            <value>
                <fullName>Outbound SMS</fullName>
            </value>
            <value>
                <fullName>Outbound Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>