force-app/main/default/objects/animalos__Job_Note__c/fields/aos_Case__c.field-meta.xml
<CustomField>
    <fullName>aos_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Job Notes</relationshipLabel>
    <relationshipName>Job_Notes3</relationshipName>
    <type>Lookup</type>
</CustomField>