force-app/main/default/objects/animalos__Job_Note__c/fields/aos_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>aos_Job_Id__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>animalos__Job__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Id</label>
    <type>Text</type>
</CustomField>